mycelium/apps/mycelium_core/static/css/more.css
.more_buttons {
	width: 100%;
	overflow: auto;
}
.more_button {
	border-radius: 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;	
	display: block;
	width: 30%;
	padding: 10px 20px 20px 130px;
/*	margin: 0px 10px 20px 10px;*/
	margin: 10px;
	min-height: 70px;
	background-repeat: no-repeat;
	background-position: 10px 10px;
	float: left;
}
.more_button .button_title {
	font-size: 30px;
/*	text-align: center;*/
	padding-top: 9px;
}
.more_button .button_description {
	font-size: 14px;
	color: #92C2FC;
/*	text-align: center;	*/
}
.more_button:hover .button_description {
	color: #BCD8FB;
}
.data_import_btn {
	background-image: url("../images/icon-data-import-100.png");
	background-repeat: no-repeat;
	background-position: 10px 10px;
}
.users_button {
	background-image: url("../images/icon-users-100.png");
	background-position: 10px 15px;	
}
.logo_button {
	background-image: url("../images/icon-logo-100.png");
	background-position: 10px 6px;
}
.account_button {
	background-image: url("../images/icon-account-100.png");
}
.my_account_button {
	background-image: url("../images/icon-my-account-100.png");
	background-position: 13px 7px;
}
.spreadsheets_btn {
	background-image: url("../images/icon-spreadsheet-76.png");
	background-position: 24px 10px;	
}
.website_button {
	background-image: url("../images/icon-website-76.png");
	background-position: 24px 10px;	
}
.tag_button {
	background-image: url("../images/icon-tag-100.png");
	background-position: 14px 23px;	
}
.more_row {
	clear: left;
	width: 100%;
}

